fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a {
 .line {
     display: block;
     padding:3vh 0;
-    font-size: 2vh;
+    font-size: 2.5vh;
     font-weight: 200;
 }
 
@@ -43,7 +43,7 @@ a {
 }
 
 .icon {
-    font-size: 4vh;
+    font-size: 5vh;
     padding: 0 1vw;
 }
 
@@ -56,6 +56,7 @@ a {
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 25px;
+    font-size: 2vh;
 }
